[package]
name = "bevy_astroblasto"
version = "0.1.0"
authors = ["IceSentry <c.giguere42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
fastrand = "1.3.4"
